# app

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  Claude.md  Privacy.md  README.md  README_en.md  README_zh-TW.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  test_web_build.sh  update_grpc.bat  update_rsut.bat
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: linux_nightly.yml  windows_nightly.yml
.xwin-cache/dl/: Microsoft.VC.14.44.17.14.CRT.Headers.base.vsix  Win11SDK_10.0.26100_headers.msi  Win11SDK_10.0.26100_libs_x86_64.msi  Win11SDK_10.0.26100_store_headers.msi  Win11SDK_10.0.26100_store_headers_onecoreuap.msi  Win11SDK_10.0.26100_store_libs.msi  Win11SDK_10.0.26100_uap_headers.msi  Win11SDK_10.0.26100_x64_headers.msi  manifest_17.json  ucrt.msi
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.Headers.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Desktop.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Store.base.vsix/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers_onecoreuap.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_uap_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_x64_headers.msi/: tree.txt
.xwin-cache/unpack/ucrt.msi/: tree.txt
assets/: advanced_localization.json  cert.pem  localization_web_script.js  performance.json  request_interceptor.js  web_script.js
assets/web/input_method/: index.html
converter-target/BANU/: banu_defender.xml  fix_normals.py  merge_banu_parts.py
converter-target/BANU/Defender/: BANU_Defender.chrparams  BANU_Defender.meshsetup  BANU_Defender.mtl  BANU_Defender_Bed_Left.cga  BANU_Defender_Bed_Left.cgam  BANU_Defender_Bed_Left_lod1.cga  BANU_Defender_Bed_Left_lod1.cgam  BANU_Defender_Bed_Left_lod2.cga  (+276 more)
docs/: AUTH_QUICK_START.md
lib/: app.dart  app.freezed.dart  app.g.dart  global_ui_model.dart  main.dart
lib/api/: analytics.dart  api.dart  grpc_api.dart  news_api.dart  rss.dart  udb.dart
lib/base/: ui.dart  ui_model.dart
lib/common/: conf.dart
lib/data/: app_advanced_localization_data.dart  app_placard_data.dart  app_torrent_data.dart  app_unp4k_p4k_item_data.dart  app_version_data.dart  app_web_localization_versions_data.dart  citizen_news_data.dart  citizen_news_data.freezed.dart  citizen_news_data.g.dart  countdown_festival_item_data.dart  dcb_data.dart  doh_client_response_data.dart  game_performance_data.dart  input_method_api_data.dart  localization_extension_api_data.dart  nav_api_data.dart  nav_api_data.freezed.dart  nav_api_data.g.dart  rsi_game_library_data.dart  sc_localization_data.dart
lib/grpc/: party_room_server.dart
lib/l10n/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb  intl_zh_TW.arb
lib/provider/: aria2c.dart  aria2c.freezed.dart  aria2c.g.dart  dcb_viewer.dart  dcb_viewer.freezed.dart  dcb_viewer.g.dart  download_manager.dart  download_manager.freezed.dart  download_manager.g.dart  party_room.dart  party_room.freezed.dart  party_room.g.dart  unp4kc.dart  unp4kc.freezed.dart  unp4kc.g.dart
lib/ui/: index_ui.dart  index_ui_model.dart  splash_ui.dart  splash_ui_model.dart
lib/widgets/: cache_image.dart  my_page_route.dart  widgets.dart
linux/: CMakeLists.txt  com.starcitizen_doctor.desktop  my_application.cc  sctoolbox.desktop
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/go/: go.mod  rs_gen.go  rs_impl.go
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.io.rs.bk  bridge_generated.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  model_render.rs
rust/src/api/: applinks_api.rs  asar_api.rs  audio_api.rs  downloader_api.rs  go_api.rs  http_api.rs  mod.rs  notify_api.rs  ort_api.rs  p4k_upgrader_api.rs  process_api.rs  rs_process.rs  system_api.rs  system_info.rs  unp4k_api.rs  unp4k_model_api.rs  webview_api.rs  win32_api.rs
rust/src/assets/: webview_init_script.js
rust/src/audio/: mod.rs
rust/src/audio/wwise/: decoder.rs  mod.rs  parser.rs  tests.rs  types.rs
rust/src/downloader/: mod.rs
rust/src/go/: go_api.rs  mod.rs
rust/src/http_package/: dns.rs  mod.rs
rust/src/model_convert/: cgf_parser.rs  entity_assembly_parser.rs  glb_merge.rs  gltf_builder.rs  ivo_parser.rs  material_parser.rs  mod.rs  path_resolver.rs  pipeline.rs  texture_decode.rs  types.rs
rust/src/model_convert/cryengine/: MIGRATION_NOTES.md  cgf.rs  ivo.rs  mod.rs  model.rs  types.rs
rust/src/model_convert/cryengine/chunks/: datastream.rs  mesh.rs  mesh_subsets.rs  mod.rs  morph_targets.rs  mtl_name.rs  node.rs  node_mesh_combo.rs  timing_format.rs
rust/src/ort_models/: mod.rs  opus_mt.rs
rust/src/shaders/: model.wgsl
rust/src/webview/: mod.rs  request_interceptor.js  webview_impl.rs  webview_init_script.js  webview_stub.rs
rust_builder/android/: build.gradle
rust_builder/ios/: rust_builder.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_builder.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build_release.ps1
test/: eac_registrar_test.dart  home_p4k_download_source_dialog_test.dart  launcher_permission_helper_test.dart  localization_region_policy_test.dart  p4k_post_install_test.dart  p4k_source_session_coordinator_test.dart  rsi_launcher_store_test.dart  rsi_server_status_test.dart  unp4kc_export_models_test.dart  widget_test.dart
web/: edgeone.json  index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  win32_window.cpp
(+1632 files in other folders)
