[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = "debuginfo"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
] }
futures = { version = "0.3.32", default-features = false, features = [
    "executor",
] }
url = "2.5.8"
once_cell = "1.21.4"
reqwest = { version = "0.12.26", features = [
    "rustls-tls-webpki-roots",
    "cookies",
    "gzip",
    "json",
    "stream",
] }
hickory-resolver = { version = "0.26.1" }
anyhow = "1.0.102"
thiserror = "2.0.17"
scopeguard = "1.0"
notify-rust = "4.16.0"
asar = "0.3.0"
walkdir = "2.5.0"
ort = { version = "2.0.0-rc.12", features = [
    "xnnpack",
    "download-binaries",
    "ndarray",
] }
tokenizers = { version = "0.22.2", default-features = false, features = [
    "onig",
] }
ndarray = "0.17.2"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
ryu = "1.0.20"
unp4k_rs = { git = "https://github.com/StarCitizenToolBox/unp4k_rs", rev = "29430002d6f3a8d87feabac26c03ae0311c81263" }
#unp4k_rs = { path = "../../unp4k_rs" }
uuid = { version = "1.23.1", features = ["v4"] }
lazy_static = "1.5"
rayon = "1.12"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
librqbit = { git = "https://github.com/StarCitizenToolBox/rqbit", rev = "fcd9fc21896b39008825204762c61e7e956b5ca3", default-features = false, features = ["default-tls", "http-api-client"] }
# librqbit = { path = "../../rqbit/crates/librqbit" }
bytes = "1.11"
gltf-json = "1.4.1"
gltf = { version = "1.4.1", features = ["import", "utils"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "tga", "tiff", "dds", "ico"] }
image_dds = "0.7"
bytemuck = { version = "1.22", features = ["derive"] }
pollster = "0.4"
renderling = { git = "https://github.com/schell/renderling", rev = "a7b44f796a38cb2c734d69354fa35f1288aa02a1" }
futures-lite = "2.6"
regex = "1.12.2"
sha2 = "0.11.0"
ww2ogg = { path = "vendor/ww2ogg" }
lewton = "0.10.2"
hound = "3.5.1"
rodio = "0.22.2"
clipboard-rs = { version = "0.3.4", features = ["image"] }

# WebView
[target.'cfg(not(target_os = "macos"))'.dependencies]
wry = "0.55.0"
tao = { version = "0.35.0", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
win32job = "2.0.3"
wmi = "0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
